# icecream

./: .coderabbit.yml  .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_activity_video_metadata.py  0003_center_sido.py  0004_center_address_not_blank.py
backend/app/: db.py  main.py  schemas.py
backend/app/api/: common.py
backend/app/api/v1/: activities.py  auth.py  centers.py  children.py  insights.py  internal.py  measurements.py
backend/app/core/: config.py  errors.py  ids.py  security.py  utils.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: activity_repository.py  center_repository.py  child_repository.py  measurement_repository.py  parent_repository.py
backend/app/services/: activity_service.py  auth_service.py  center_service.py  child_service.py  diagnosis_engine.py  insight_service.py  measurement_service.py  sync_service.py
backend/data/: fitness_grade_criteria.json
backend/tests/: test_api.py  test_config.py  test_criteria_loader.py  test_kspo_client.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DIAGNOSIS_CRITERIA.md  FEAT.md  MATERIAL_SYMBOLS.md  PRD.md  REMIX_ICONS.md  SCHEMA.md  TECH_STACK.md  idea.md
docs/api-spec/: README.md  get-v1-activities.md  (+18 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
script/: fetch_center.py  fetch_video.py  kspo_common.py  sync_activities.py
(+59 files in other folders)
