[project]
name = "icecream-backend"
version = "0.1.0"
description = "아이쑥크림 유아 체력 진단·성장관리 API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "argon2-cffi>=23.1.0",
  "email-validator>=2.2.0",
  "fastapi==0.115.*",
  "httpx>=0.27.0",
  "pydantic>=2.10,<2.12",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.36",
  "starlette==0.41.*",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.mypy]
ignore_missing_imports = true
